Fix VQA dataset with CRITICAL label masking
Key changes:
- Rewrote vqa_dataset.py with proper label masking
- Question tokens set to -100 (only answer tokens contribute to loss)
- Added VQADatasetConfig dataclass for configuration
- Robust fallbacks for different VQA dataset formats
- Memory-efficient image loading with error handling
- Multiple answer format support (VQAv2 has 10 answers/question)
- Fixed .gitignore: data/ -> /data/ (was blocking src/data/)
- Added test file validating label masking works correctly

This is CRITICAL for generative VQA training - without label masking,
the model would try to predict the question tokens which is wrong.

--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,8 @@ tmp/
 temp/
 *.tmp
 
-# Data (large files)
-data/
+# Data (large files) - NOT src/data which is code!
+/data/
 *.tar
 *.tar.gz
 *.zip
