--- a/configs/ablation_spatial_only.yaml
+++ b/configs/ablation_spatial_only.yaml
@@ -1,41 +1,34 @@
 # ============================================================================
-# ABLATION: NO RELATION ATTENTION (Spatial Encoding Only)
-# BLIP-2 + Scene Reasoning Module with Spatial Encoding but Standard Attention
+# ABLATION: SPATIAL ENCODING ONLY
+# BLIP-2 + Scene Reasoning Module (Spatial Encoding, NO Relation Attention)
 # ============================================================================
-# Purpose: Test the contribution of Spatial Position Encoding alone,
-#          using standard self-attention instead of Relation-Aware Attention.
-#          This is IDENTICAL to ablation_spatial_only.yaml (kept for clarity).
+# Purpose: Isolate the contribution of 2D Spatial Position Encoding
+#          independent of the Relation-Aware Attention mechanism.
 #
 # What's ENABLED:
 #   ✓ Scene Reasoning Module (processing layers active)
 #   ✓ Spatial Position Encoding (2D row/column embeddings)
-#   ✓ Standard Self-Attention (no relative position bias)
+#   ✓ Standard Self-Attention (without relative position bias)
 #
 # What's DISABLED:
-#   ✗ Relation-Aware Attention (attention without position_bias)
+#   ✗ Relation-Aware Attention (no position_bias in attention)
 #
-# Technical Details:
-#   - Spatial encoding adds 2D position embeddings to features
-#   - Attention operates as standard multi-head self-attention
-#   - Position bias computed but NOT used in attention scores
-#   - This isolates spatial embedding contribution from attention enhancement
-#
-# Hypothesis: Spatial encoding should provide position-awareness to features,
-#             even without injecting position bias into attention weights.
-#             Expect improvement on spatial reasoning questions.
+# Hypothesis: Spatial encoding alone should improve performance on
+#             spatial reasoning questions by providing explicit 2D
+#             position information to the model.
 #
 # Expected Behavior:
-#   - Features receive 2D position embeddings (additive)
-#   - Standard attention (Q, K, V without bias)
-#   - Performance between baseline and proposed
-#   - Should show spatial question improvement
+#   - Features receive 2D position embeddings
+#   - Attention operates without relative position bias
+#   - Performance should be between baseline and full proposed model
+#   - May show improvement on spatial/counting questions
 #
-# Research Question: How much does explicit 2D position encoding
-#                    contribute independent of attention modification?
+# Research Question: Does explicit 2D position encoding contribute
+#                    to improved spatial understanding in VQA?
 #
 # Usage:
-#   python scripts/train.py --config configs/ablation_no_relation.yaml
-#   python scripts/train.py --config configs/ablation_no_relation.yaml --smoke_test
+#   python scripts/train.py --config configs/ablation_spatial_only.yaml
+#   python scripts/train.py --config configs/ablation_spatial_only.yaml --smoke_test
 # ============================================================================
 
 seed: 42
@@ -65,7 +58,7 @@ model:
   freeze_llm: true
   freeze_qformer: false
   
-  # Scene Reasoning - ABLATION: Spatial Only (No Relation)
+  # Scene Reasoning - ABLATION: Spatial Only
   use_scene_reasoning: true
   scene_hidden_dim: 768
   scene_num_heads: 8
@@ -73,7 +66,7 @@ model:
   scene_mlp_ratio: 4.0
   scene_dropout: 0.1
   use_spatial_encoding: true     # ✓ ENABLED - Testing spatial contribution
-  use_relation_attention: false  # ✗ DISABLED - Standard attention
+  use_relation_attention: false  # ✗ DISABLED - No position bias in attention
   spatial_encoding_dim: 64
   
   # Generation (identical to proposed)
@@ -121,14 +114,14 @@ training:
 # Logging Configuration
 logging:
   output_dir: "./outputs"
-  experiment_name: "ablation_no_relation"
+  experiment_name: "ablation_spatial_only"
   use_tensorboard: true
   use_wandb: false
   wandb_project: "vlm-vqa-research"
   wandb_entity: null
   log_every_n_steps: 10
   save_predictions: true
-  save_attention_maps: false  # Standard attention, no special maps
+  save_attention_maps: false  # No relation attention to visualize
 
 # Evaluation Configuration
 evaluation:
